syntax = "proto3";

option csharp_namespace = "DatabaseManagementService";

package database;

service DatabaseManagement {
  rpc AddToCollection (AdditionRequest) returns (DatabaseResponse);
  rpc RemoveFromCollection (CollectionRequest) returns (DatabaseResponse);
  rpc GetFromCollection (CollectionRequest) returns (DatabaseResponse);
  rpc UpdateCollection (AdditionRequest) returns (DatabaseResponse);
  rpc UploadFile (UploadFileRequest) returns (UploadFileResponse);
  rpc DownloadFile (DownloadFileRequest) returns (DownloadFileResponse);
  rpc UploadImage (UploadImageRequest) returns (UploadImageResponse);
  rpc DownloadImage (DownloadImageRequest) returns (DownloadImageResponse);
}

message DatabaseResponse {
	string message = 1;
	MessageType message_type = 2;
}

enum MessageType {
	INFO = 0;
	WARNING = 1;
	ERROR = 2;
}

message AdditionRequest {
	string collection = 1;
	string data_json = 2;
}

message CollectionRequest {
	string collection = 1;
	string criteria_json = 2;
}

message UploadFileRequest {
	bytes file = 1;
}

message UploadFileResponse {
	string id = 1;
}

message DownloadFileRequest {
	string id = 1;
}

message DownloadFileResponse {
	bytes file = 1;
}

message None {
}

message UploadImageRequest {
	bytes file = 1;
}

message UploadImageResponse {
	string id = 1;
}

message DownloadImageResponse {
	bytes file = 1;
}

message DownloadImageRequest {
	string id = 1;
}
